--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=36DD3CF34D6D11151DBCE3BC423EDBB0
 ProjectName=Third Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bSkipEditorContent=True
+bForceOneChunkPerFile=True
+bChunkHardReferencesOnly=True
+
